fixed picture alignment and fixed types in tooltip components (#33)

--- a/src/hud/components/Inventory/inventory.module.scss
+++ b/src/hud/components/Inventory/inventory.module.scss
@@ -43,6 +43,7 @@
   flex-direction: row;
   justify-content: flex-end;
   padding: 0.5em;
+  user-select: none;
 }
 
 .icon {
