--- a/src/hud/uiElements/InventorySlot/inventorySlot.module.scss
+++ b/src/hud/uiElements/InventorySlot/inventorySlot.module.scss
@@ -19,7 +19,6 @@
 }
 
 .slotInner {
-  background-size: 100%;
   border-radius: 0.5em;
   height: 100%;
   position: relative;
@@ -49,8 +48,6 @@
     position: absolute;
     top: 0;
     width: 100%;
-    will-change: opacity;
-    // z-index: -1;
   }
 }
 
@@ -59,6 +56,7 @@
 }
 
 .slotItem {
+  background-size: 100%;
   height: 100%;
 }
 
